--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
   ],
   "author": "",
   "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "7.23.6",
+    "@babel/preset-env": "7.23.6",
+    "@types/jest": "^29.5.11",
+    "babel-jest": "29.7.0",
+    "jest": "29.7.0",
+    "webpack-cli": "3.3.12"
+  },
   "peerDependencies": {
     "webpack": "^4.47.0"
   },
   "dependencies": {
-    "mkdirp": "^3.0.1"
+    "chalk": "^4.1.2",
+    "mkdirp": "^3.0.1",
+    "rmdir": "^1.2.0"
   }
 }
